--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
-
-    <title>React Flowers 🌸</title>
+    <title>React Flowers</title>
   </head>
   <body>
     <div id="root"></div>
